Changes in release 0.26.4:
* Fix If: header insertion by ne_lock* to use CRLF-terminated headers
* Fix Negotiate Authentication-Info response header verification with GSSAPI
* Fix SSPI build with some versions of MinGW (Gisle Vanem)
* Fix for SSPI segfault in response header verification (Mike Dicuccio)
* Fix error strings for CONNECT SSL proxy tunnel request failure
* Fix install-nls for VPATH builds (Hans Meine)

Changes in release 0.26.3:
* Fix buffer under-read in URI parser (Laszlo Boszormenyi, CVE-2007-0157)
* Fix regression in handling of "attempt" argument passed to auth callbacks;
  ensure the value only increments for each invocation of the callback
* Fix handling of "nextnonce" parameter in Digest authentication

Changes in release 0.26.2:
* Fix error reported for LOCK responses lacking a Lock-Token header.
* Use Libs.private in neon.pc for newer versions of pkg-config.
* Build fix for platforms without libintl.h.
* Build fixes for MinGW. (Matthias Miller)
* Build fix for h_errno detection on HP-UX 10. (Albert Chin)
* Win32: enable debugging; build fixes with some SDKs. (Kiyo Kelvin Lee)

Changes in release 0.26.1:
* Build fixes for Win32 (D.J. Heap) and OS X.
* Add Simplified Chinese translation (Dongsheng Song).

Changes in release 0.26.0:
* Added internationalization support:
 - ne_i18n.h exposes ne_i18n_init(), a process-global initializer
   which may be required for some applications
 - (partial) message catalogs for cs, de, fr, ja, nn, ru and tr
 - NE_FEATURE_I18N feature code added to indicate support
* Added support for GnuTLS (thanks to Aleix Conchillo Flaque):
 - pass --with-ssl=gnutls to configure; GnuTLS >= 1.0.22 required
 - use --with-ca-bundle to specify a default SSL CA root bundle
 - some remaining issues with PKCS#12 certs in current GnuTLS releases,
   distinguished name handling is sub-standard relative to OpenSSL
* Changes and additions to URI support:
 - ne_uri structure: add query, fragment fields; authinfo renamed
   to userinfo